--- a/src/pages/Home/Home.module.css
+++ b/src/pages/Home/Home.module.css
@@ -1,4 +1,8 @@
 section {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
   background: rgb(0, 51, 0);
   background: linear-gradient(
     90deg,
@@ -7,16 +11,21 @@ section {
     rgba(0, 65, 0, 0.5) 100%
   );
 }
+.formContainer {
+  width: 50%;
+}
 .title {
   margin: 0;
   padding-top: 0.5em;
   padding-bottom: 0.5em;
-}
-.inputContainer {
 }
 
 .buttonContainer {
   display: flex;
   justify-content: center;
   gap: 1em;
+}
+.buttonContainer {
+  padding-top: 1.5rem;
+  padding-bottom: 1.5rem;
 }
