--- a/src/pages/Home/Home.module.css
+++ b/src/pages/Home/Home.module.css
@@ -1,5 +1,7 @@
 section {
   display: flex;
+  padding-top: 1.5rem;
+  padding-bottom: 1.5rem;
   flex-direction: column;
   align-items: center;
 
@@ -11,12 +13,15 @@ section {
     rgba(0, 65, 0, 0.5) 100%
   );
 }
+.text {
+  margin: 0;
+  padding-bottom: 0.5em;
+}
 .formContainer {
   width: 50%;
 }
 .title {
   margin: 0;
-  padding-top: 0.5em;
   padding-bottom: 0.5em;
 }
 
