--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -7,6 +7,7 @@
   font-family: inherit;
   cursor: pointer;
   transition: border-color 0.25s;
+  width: 300px;
 }
 .button:hover {
   background-color: greenyellow;
