--- a/src/index.css
+++ b/src/index.css
@@ -26,3 +26,15 @@ h1 {
   font-size: 3em;
   line-height: 1.1;
 }
+h2 {
+  font-size: 2em;
+  line-height: 1.1;
+}
+h3 {
+  font-size: 1.5em;
+  line-height: 1.1;
+}
+
+section {
+  padding: 2rem 2rem;
+}
