--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -10,7 +10,6 @@
   width: 300px;
 }
 .button:hover {
-  background-color: greenyellow;
   transition-property: background-color;
   transition: 500ms cubic-bezier(0.7, 0.84, 0.44, 1);
   border-color: #646cff;
@@ -18,4 +17,11 @@
 .button:focus,
 .button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
+}
+.buttonHoverGreen:hover {
+  background-color: greenyellow;
+}
+
+.buttonHoverRed:hover {
+  background-color: rgba(255, 2, 2);
 }
