--- a/src/components/Container/Container.module.css
+++ b/src/components/Container/Container.module.css
@@ -1,3 +1,16 @@
 .container {
   width: 1280px;
 }
+.header {
+  height: 300px;
+  background-repeat: no-repeat;
+  background-image: url('../../assets/images/backGroundFoneTop.png');
+  background-size: cover;
+}
+
+.footer {
+  height: 300px;
+  background-repeat: no-repeat;
+  background-image: url('../../assets/images/backGroundFoneBottom.png');
+  background-size: cover;
+}
