--- a/src/components/ModalWindow/ModalWindow.module.css
+++ b/src/components/ModalWindow/ModalWindow.module.css
@@ -9,6 +9,7 @@
   justify-content: center;
   align-items: center;
   animation: fadeIn 0.5s;
+  z-index: 99;
 }
 .modalWindow {
   position: relative;
